Fixed problem where some days were not visible in month view

--- a/Heron.MudCalendar/Styles/_calendar.scss
+++ b/Heron.MudCalendar/Styles/_calendar.scss
@@ -43,7 +43,6 @@
       color: inherit;
       display: table-row;
       outline: 0;
-      height: 20%;
 
       > td, th {
         display: table-cell;
